# Simple

./: .gitignore  CMakeLists.txt  LICENSE  Simple_Implementation_Document.md  Simple_Programming_Language_Document.md  Simple_VM_Opcode_Spec.md  build.bat  build.ps1  build.sh  build_linux  build_macos  build_windows  index.html  install.sh  release.sh  sprint.md  styles.css
.github/workflows/: release.yml  vscode-extension.yml
Byte/include/: opcode.h  sbc_types.h
Byte/src/: sbc_loader.cpp  sbc_verifier.cpp
CLI/src/: main.cpp
Docs/: Byte.md  CLI.md  IR.md  Implementation.md  LSP.md  Lang.md  Modules.md  README.md  Sprint.md  StdLib.md  VM.md
Docs/legacy/: SBC_ABI.md  SBC_IR.md  SBC_Metadata_Tables.md  SBC_Rules.md  Simple_Implementation_Document.md
Editor/vscode-simple/: .vscodeignore  LICENSE.txt  README.md  extension.js  package-lock.json  package.json
IR/include/: ir_compiler.h  ir_lang.h
IR/src/: ir_builder.cpp  ir_lang.cpp
LSP/include/: lsp_server.h
LSP/src/: lsp_server.cpp
Lang/include/: lang_ast.h  lang_lexer.h  lang_parser.h  lang_reserved.h  lang_token.h
Lang/src/: lang_lexer.cpp  lang_parser.cpp  lang_sir.cpp  lang_validate.cpp
Simple/: CMakeLists.txt  build.sh  install.sh
Simple/Byte/include/: sbc_emitter.h  sbc_loader.h  sbc_types.h  sbc_verifier.h
Simple/Byte/src/: opcode.cpp  sbc_loader.cpp  sbc_verifier.cpp
Simple/Byte/tools/: gen_sbc.cpp
Simple/CLI/src/: main.cpp
Simple/Docs/: Byte.md  CLI.md  IR.md  Implementation.md  Lang.md  Modules.md  README.md  SBC_Headers.md  SBC_IR.md  SBC_Runtime.md  Simple_Programming_Language_Document.md  Sprint.md  StdLib.md  VM.md
Simple/Docs/legacy/: SBC_ABI.md
Simple/IR/include/: ir_builder.h  ir_compiler.h  ir_lang.h
Simple/IR/src/: ir_builder.cpp  ir_compiler.cpp  ir_lang.cpp
Simple/Lang/include/: lang_ast.h  lang_lexer.h  lang_parser.h  lang_sir.h  lang_token.h  lang_validate.h
Simple/Lang/src/: lang_lexer.cpp  lang_parser.cpp  lang_sir.cpp  lang_validate.cpp
Simple/Tests/ffi/: simple_ffi.c
Simple/Tests/simple/: array_empty.simple  artifact_method.simple  bool_ops.simple  char_compare.simple  core_dl_open.simple  core_dl_open_raylib.simple  enum_explicit.simple  enum_value.simple  extern_core_os_args_count.simple  extern_decl.simple  fn_literal.simple  for_loop.simple  hello.simple  if_else.simple  import_basic.simple  list_index.simple  main_implicit_return.simple  math.simple  module_multi.simple  reserved_file.simple  reserved_math.simple  reserved_time.simple  string_escape.simple  string_escape_hex.simple  string_len.simple
Simple/Tests/simple_bad/: array_missing_dim.simple  artifact_member_without_self.simple  bool_arith.simple  char_arith.simple  char_compare_with_int.simple  extern_call_arg_count.simple  function_as_type.simple  import_unknown.simple  index_negative.simple  index_oob.simple  invalid_char_escape.simple  invalid_hex_escape.simple  invalid_string_escape.simple  len_invalid_arg.simple  list_elem_type_mismatch.simple  module_as_type.simple  module_func_return_mismatch.simple  module_var_access.simple  parser_unterminated_block.simple  type_mismatch.simple  unknown_type.simple
Simple/Tests/simple_modules/: import_local_main.simple
Simple/Tests/sir/: arithmetic_mix.sir  color_avg.sir  dot_product.sir  float_accum.sir  gcd_iter.sir  list_stack.sir  sum_array.sir  sum_loop.sir
Simple/Tests/tests/: simple_runner.cpp  simple_runner.h  sir_runner.cpp  sir_runner.h  test_core.cpp  test_ir.cpp  test_lang.cpp  test_main.cpp  test_utils.h
Simple/VM/include/: heap.h  intrinsic_ids.h  scratch_arena.h  simple_api.h  vm.h
Simple/VM/src/: vm.cpp
SimpleByteCode/: Implementation.md  SBC_ABI.md  SBC_Debug.md  SBC_Encoding.md  SBC_Headers.md  SBC_IR.md  SBC_Metadata_Tables.md  SBC_OpCodes.md  SBC_Sections.md  Sprint.md
SimpleByteCode/vm/: CMakeLists.txt  README.md  build.bat  build.sh
SimpleByteCode/vm/include/: heap.h  intrinsic_ids.h  ir_builder.h  ir_compiler.h  ir_lang.h  opcode.h  sbc_emitter.h  sbc_loader.h  sbc_types.h  sbc_verifier.h  scratch_arena.h  vm.h
SimpleByteCode/vm/src/: heap.cpp  ir_builder.cpp  ir_compiler.cpp  ir_lang.cpp  main.cpp  opcode.cpp  sbc_loader.cpp  sbc_verifier.cpp  vm.cpp
SimpleByteCode/vm/tests/: test_core.cpp  test_ir.cpp  test_jit.cpp  test_main.cpp  test_utils.cpp  test_utils.h
SimpleByteCode/vm/tests/fixtures/: add_i32.sbc  fib_iter.sbc  fib_rec.sbc  loop.sbc  uuid_len.sbc
SimpleByteCode/vm/tools/: gen_sbc.cpp
Tests/simple/: add_fn.simple  array_assign.simple  array_empty.simple  array_nested.simple  artifact_method.simple  artifact_named_init.simple  bool_ops.simple  cast_i8_to_i32.simple  char_compare.simple  char_escape_hex.simple  core_dl_open.simple  core_dl_open_global.simple  core_dl_open_raylib.simple  float_literal_context.simple  fn_literal.simple  for_loop.simple  for_range.simple  for_range_header_init.simple  if_else.simple  import_basic.simple  io_print.simple  list_empty.simple  list_len.simple  list_methods.simple  list_nested.simple  list_ops.simple  module_access.simple  module_func_params.simple  module_var_access.simple  point_sum.simple  reserved_file.simple  reserved_io_buffer.simple  reserved_math.simple  reserved_math_pi.simple  reserved_time.simple  semicolons_same_line.simple  sum_array.simple  sum_loop.simple  while_break.simple
Tests/simple_bad/: array_elem_type_mismatch.simple  array_size_mismatch.simple  artifact_member_without_self.simple  artifact_unknown_member.simple  assign_to_immutable.simple  break_outside_loop.simple  call_arg_count.simple  call_arg_type_mismatch.simple  char_compare_with_int.simple  enum_type_as_value.simple  enum_unknown_member.simple  enum_unqualified.simple  for_missing_init.simple  for_range_missing_end.simple  index_non_container.simple  index_non_int.simple  index_non_int_expr.simple  lexer_invalid_char.simple  missing_return.simple  missing_semicolon_same_line.simple  (+4 more)
VM/: README.md
compiler/: NuGet.Config  Simple.Compiler.slnx
raylib/: game  main.simple  raylib.simple  test.simple
scripts/: fast_tests.sh  install_lsp.sh  jit_bench.sh
(+207 files in other folders)
